<resources>
    <string name="app_name" translatable="false">Oneironaut</string>
    <string name="error_occurred">An error occurred</string>
    <string name="error_occurred_message">%s ran into an error. Please email the developer to get this issue fixed.</string>
    <string name="email_developer">Email developer</string>
    <string name="email" translatable="false">kylecorry31@gmail.com</string>
    <string name="journal">Journal</string>
    <string name="settings">Settings</string>
    <string name="no_dreams">No dreams</string>
    <string name="delete">Delete</string>
    <string name="delete_dream_prompt">Delete dream?</string>
    <string name="dream">Dream</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="lucid">Lucid</string>
    <string name="recurring">Recurring</string>
    <string name="nightmare">Nightmare</string>
    <string name="save">Save</string>
</resources>