<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="0dp">

        <com.kylecorry.oneironaut.ui.ToolTitleView
            android:id="@+id/dream_entry_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/dream" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoPersonalizedLearning"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoPersonalizedLearning"
                android:inputType="text|textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/lucid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lucid" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/recurring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/recurring" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/nightmare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/nightmare" />

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="@string/save" />

    </LinearLayout>

</ScrollView>